--- a/odoo/custom/src/private/tev_form/report/invoice.xml
+++ b/odoo/custom/src/private/tev_form/report/invoice.xml
@@ -146,7 +146,7 @@
                 <t t-set="amount_to_text"
                     t-value="o.currency_id.with_context({'lang': 'th_TH'}).amount_to_text(o.amount_total)" />
                 <t t-set="amount_split" t-value="amount_to_text.split(' ')" />
-                <t t-if="len(amount_split) &gt; 2">
+                <t t-if="len(amount_split) > 2">
                     <t t-set="amount_text_thai"
                         t-value="''.join([amount_split[0], 'บาท', amount_split[3], 'สตางค์'])" />
                 </t>
