--- a/odoo/custom/src/private/tev_form/report/quotation_form_sale.xml
+++ b/odoo/custom/src/private/tev_form/report/quotation_form_sale.xml
@@ -65,7 +65,7 @@
                         <p t-field="o.validity_date" style="margin-top:-20px;padding-left: 230px;" />
                     </t>
                     <t t-else="">
-                        <p style="margin-top:-20px;padding-left: 230px;color:white;" t-esc="'.'" />
+                        <p style="margin-top:-20px;padding-left: 230px; " t-esc="'-'" />
                     </t>
                     <t t-if='o.payment_term_id'>
                         <p style="margin-top:-17px;padding-left: 150px;"
@@ -101,17 +101,21 @@
                             </td>
                             <td class="text-center"
                                 style="width: 90px;max-width:90px; min-width:90px;">
+                                <t t-if='line.product_uom_qty > 0'>
                                 <span t-field="line.product_uom_qty"
                                     style="padding-left: 10px;padding-right: 5px;" />
+                                </t>
                             </td>
                             <td class="text-center"
                                 style="width: 75px;max-width:75px; min-width:75px;">
+                                <t t-if='line.price_unit > 0.0 and line.product_uom_qty > 0'>
                                 <span t-field="line.product_uom.name"
                                     style="padding-left: 5px;padding-right: 5px;" />
+                                </t>    
                             </td>
                             <td class="text-right"
                                 style="width: 125px;width: 125px;max-width:125px; min-width:125px;">
-                                <t t-if='line.price_unit > 0.0'>
+                                <t t-if='line.price_unit > 0.0 and line.product_uom_qty > 0'>
                                     <span t-field="line.price_unit"
                                         style="padding-left: 5px;padding-right: 5px;" />
                                 </t>
@@ -122,7 +126,7 @@
                             </td>
                             <td class="text-right"
                                 style="width: 150px;width: 150px;max-width:150px; min-width:150px;">
-                                <t t-if='line.price_subtotal > 0.0'>
+                                <t t-if='line.price_subtotal > 0.0 and line.product_uom_qty > 0'>
                                     <span t-field="line.price_subtotal"
                                         style="padding-left: 5px;padding-right: 5px;" />
                                 </t>
@@ -165,7 +169,7 @@
                     <b style="font-size: 25px;" t-esc=" '('+ amount_text_thai +')' " />
                 </p>
             </div>
-            
+
             <!-- ส่วนของ description  -->
             <div class="page"
                 style="font-size: 15px;
@@ -223,7 +227,7 @@
                             <t t-call="tev_form.tev_quatation_custom_form" />
                         </div>
                     </t>
-    
+
                 </t>
             </t>
         </xpath>
