update and fix bug

--- a/odoo/custom/src/private/tev_form/report/receipt.xml
+++ b/odoo/custom/src/private/tev_form/report/receipt.xml
@@ -8,7 +8,7 @@
                 <div class="col-3" name="col_left"
                     style="padding-top: 147px; padding-left: 40px;font-size: 25px;">
                     <p t-field="o.name" />
-                    <p style="margin-top:-15px;" t-field="o.date_order" />
+                    <p style="margin-top:-15px;" t-field="o.date" />
                 </div>
             </div>
             <div class="row" style="padding-left: 60px;position: absolute;top: 225px;">
@@ -54,8 +54,8 @@
 
                 </div>
                 <div class="col-5" style="font-size: 25px;">
-                    <t t-if='o.client_order_ref'>
-                        <p style="padding-top: 1px;padding-left: 40px;" t-field="o.client_order_ref" />
+                    <t t-if='o.ref'>
+                        <p style="padding-top: 1px;padding-left: 40px;" t-field="o.ref" />
                     </t>
                     <t t-else="">
                         <p style="padding-top: 2px;padding-left: 150px;color:white;" t-esc="'.'" />
@@ -96,7 +96,8 @@
                     </tr>
 
                     <t t-set="total_amount" t-value="0" />
-                    <t t-foreach="o.invoice_ids" t-as="line">
+                    <t t-set="invoice_ids" t-value="o.get_invoices()" />
+                    <t t-foreach="invoice_ids" t-as="line">
                         <t t-if="line.move_type!='out_refund'">
                             <t t-set="total_amount" t-value="total_amount+line.amount_total" />
                             <tr>
@@ -160,16 +161,7 @@
             </div>
 
             <!-- description -->
-            <div class="page"
-                style="font-size: 15px;
-                                        position: absolute;
-                                        top: 1050px;
-                                        min-width: 1050px;
-                                        max-width:1050px;
-                                        padding-left: 90px;">
-                <span t-field="o.note" style="padding-left: 5px;" />
-            </div>
-
+            
         </div>
     </template>
 
