--- a/odoo/custom/src/private/tev_form/report/credit_note_tax_invoice.xml
+++ b/odoo/custom/src/private/tev_form/report/credit_note_tax_invoice.xml
@@ -10,13 +10,13 @@
                     <p t-field="o.name" />
                     <p style="margin-top:-15px;" t-field="o.invoice_date" />
                 </div>
-            </div> 
+            </div>
             <div class="row" style="padding-left: 60px;position: absolute;top: 225px;">
                 <div class="col-6" name="col_left"
                     style="font-size: 18px;max-width:600px; min-width:600px;">
                     <table style="table-layout: fixed;padding: 10px 10px;">
                         <tr>
-                            <td style="width: 140px;max-width:140px; min-width:140px;">
+                             <td style="width: 205px;max-width:205px; min-width:205px;">
                                 <b style="font-size: 20px;">ชื่อบริษัท / Company : </b>
                             </td>
                             <td>
@@ -27,7 +27,7 @@
                             <td style="width: 140px;max-width:140px; min-width:140px;">
                                 <b style="font-size: 20px;">ที่อยู่บริษัท / Address :</b>
                             </td>
-                            <td style="width: 350px;max-width:350px; min-width:350px;">
+                            <td style="width: 303px;max-width:303px; min-width:303px;">
                                 <span t-field="o.partner_id.street" />
                                 <span></span>
                                 <span t-field="o.partner_id.street2" />
@@ -47,8 +47,24 @@
                                         <span t-field="o.partner_id.mobile" />
                                     </td>
                                 </tr>
-
                             </t>
+                        </tr>
+                        <tr>
+                            <td style="width: 80px;max-width:80px; min-width:80px;">
+                                <b style="font-size: 20px;">เลขประจำตัวผู้เสียภาษีอากร / Tax ID:</b>
+                            </td>
+                            <td>
+                                <span t-field="o.partner_id.vat" />
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td style="width: 80px;max-width:80px; min-width:80px;">
+                                <b style="font-size: 20px;">สาขาที่ / Tax Branch:</b>
+                            </td>
+                            <td>
+                                <span>สำนักงานใหญ่</span>
+                            </td>
                         </tr>
                     </table>
 
@@ -60,10 +76,12 @@
                     <t t-else="">
                         <p style="padding-top: 5px; padding-left: 150px;color:white;" t-esc="'.'" />
                     </t>
-                        <p style="margin-top:-24px; padding-left: 210px;" t-esc="o.old_invoice(o.ref)" />
-                        <p style="margin-top:-24px; padding-left: 210px;" t-esc="o.old_invoice_date()" />
+                    <p style="margin-top:-24px; padding-left: 210px;" t-esc="o.old_invoice(o.ref)" />
+                    <p style="margin-top:-24px; padding-left: 210px;" t-esc="o.old_invoice_date()" />
                 </div>
             </div>
+
+            <!-- line -->
             <div class="page"
                 style="
                                         font-size: 25px;
@@ -74,7 +92,7 @@
                                         margin-left: 45px;
                                         margin-top: 70px;
                                         position: absolute;
-                                        top: 340px;">
+                                        top: 415px;">
                 <table style="table-layout: fixed;padding: 10px 10px;">
                     <t t-foreach="o.invoice_line_ids" t-as="line">
                         <tr>
@@ -88,7 +106,7 @@
                             <td
                                 style="width: 330px;max-width:330px; min-width:330px;font-size: 18px;">
                                 <span t-field="line.name"
-                                    style="padding-left: 10px;padding-right: 10px;" />
+                                    style="padding-left: 10px;padding-right: 10px;white-space: pre-wrap;" />
                             </td>
                             <td class="text-center"
                                 style="width: 90px;max-width:90px; min-width:90px;">
@@ -97,6 +115,8 @@
                             </td>
                             <td class="text-center"
                                 style="width: 75px;max-width:75px; min-width:75px;">
+                                <span t-field="line.product_uom_id"
+                                    style="padding-left: 10px;padding-right: 5px;" />
                             </td>
                             <td class="text-right"
                                 style="width: 125px;width: 125px;max-width:125px; min-width:125px;">
@@ -107,7 +127,10 @@
                             </td>
                             <td class="text-right"
                                 style="width: 75px;max-width:75px; min-width:75px;">
-                                <span style="margin-top:10px;color:white;" t-field='line.discount' />
+                                <t t-if='line.discount > 0.0'>
+                                    <span t-esc="'{0:,.0f} %'.format(line.discount)"
+                                        style="margin-top:10px;" />
+                                </t>
                             </td>
                             <td class="text-right"
                                 style="width: 150px;width: 150px;max-width:150px; min-width:150px;">
@@ -122,7 +145,7 @@
             </div>
             <div class="page"
                 style="position: absolute;
-                                        top: 893px;
+                                        top: 976px;
                                         font-size: 25px;
                                         text-align: right;
                                         padding-left: 970px;
@@ -137,10 +160,11 @@
                     style="margin-top:-10px;" />
 
             </div>
+
+            <!-- amount to text -->
             <div class="page"
                 style="position: absolute;
-                                        top: 1040px;">
-                <!-- amount to text -->
+                                        top: 1125px;">
                 <t t-set="amount_to_text"
                     t-value="o.currency_id.with_context({'lang': 'th_TH'}).amount_to_text(o.amount_total)" />
                 <t t-set="amount_split" t-value="amount_to_text.split(' ')" />
@@ -160,7 +184,7 @@
             <div class="page"
                 style="font-size: 15px;
                                         position: absolute;
-                                        top: 1080px;
+                                        top: 1165px;
                                         min-width: 1050px;
                                         max-width:1050px;
                                         padding-left: 90px;">
