--- a/odoo/custom/src/private/tev_form/report/delivery_note_tax_invoice.xml
+++ b/odoo/custom/src/private/tev_form/report/delivery_note_tax_invoice.xml
@@ -16,7 +16,7 @@
                     style="font-size: 18px;max-width:600px; min-width:600px;">
                     <table style="table-layout: fixed;padding: 10px 10px;">
                         <tr>
-                            <td style="width: 140px;max-width:140px; min-width:140px;">
+                            <td style="width: 205px;max-width:205px; min-width:205px;">
                                 <b style="font-size: 20px;">ชื่อบริษัท / Company : </b>
                             </td>
                             <td>
@@ -27,7 +27,7 @@
                             <td style="width: 140px;max-width:140px; min-width:140px;">
                                 <b style="font-size: 20px;">ที่อยู่บริษัท / Address :</b>
                             </td>
-                            <td style="width: 350px;max-width:350px; min-width:350px;">
+                            <td style="width: 303px;max-width:303px; min-width:303px;">
                                 <span t-field="o.partner_id.street" />
                                 <span></span>
                                 <span t-field="o.partner_id.street2" />
@@ -47,15 +47,34 @@
                                         <span t-field="o.partner_id.mobile" />
                                     </td>
                                 </tr>
-
                             </t>
                         </tr>
+
+                        <tr>
+                            <td style="width: 80px;max-width:80px; min-width:80px;">
+                                <b style="font-size: 20px;">เลขประจำตัวผู้เสียภาษีอากร / Tax ID:</b>
+                            </td>
+                            <td>
+                                <span t-field="o.partner_id.vat" />
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td style="width: 80px;max-width:80px; min-width:80px;">
+                                <b style="font-size: 20px;">สาขาที่ / Tax Branch:</b>
+                            </td>
+                            <td>
+                                <span>สำนักงานใหญ่</span>
+                            </td>
+                        </tr>
+
                     </table>
 
                 </div>
                 <div class="col-5" style="font-size: 25px;">
-                    <t t-if='o.ref'>
-                        <p style="padding-top: 1px;padding-left: 150px;" t-field="o.ref" />
+                    <t t-if='o.invoice_origin'>
+                        <p style="padding-top: 1px;padding-left: 150px;"
+                            t-field="o.invoice_origin" />
                     </t>
                     <t t-else="">
                         <p style="padding-top: 1px;padding-left: 150px;color:white;" t-esc="'.'" />
@@ -66,6 +85,8 @@
                     </t>
                 </div>
             </div>
+
+            <!-- line -->
             <div class="page"
                 style="
                                         font-size: 25px;
@@ -76,11 +97,12 @@
                                         margin-left: 45px;
                                         margin-top: 70px;
                                         position: absolute;
-                                        top: 340px;">
+                                        top: 415px;">
                 <table style="table-layout: fixed;padding: 10px 10px;">
                     <t t-foreach="o.invoice_line_ids" t-as="line">
                         <tr>
-                            <td style="width: 155px;max-width:155px; min-width:155px;">
+                            <td
+                                style="width: 155px;max-width:155px; min-width:155px; text-align: center;">
                                 <span t-field="line.product_id.default_code"
                                     style="padding-left: 10px;padding-right: 5px;" />
                             </td>
@@ -90,15 +112,19 @@
                             <td
                                 style="width: 330px;max-width:330px; min-width:330px;font-size: 18px;">
                                 <span t-field="line.name"
-                                    style="padding-left: 10px;padding-right: 10px;" />
+                                    style="padding-left: 10px;padding-right: 10px;white-space: pre-wrap;" />
                             </td>
                             <td class="text-center"
                                 style="width: 90px;max-width:90px; min-width:90px;">
-                                <span t-field="line.quantity"
-                                    style="padding-left: 10px;padding-right: 5px;" />
+                                <t t-if="line.quantity > 0">
+                                    <span t-field="line.quantity"
+                                        style="padding-left: 10px;padding-right: 5px;" />
+                                </t>
                             </td>
                             <td class="text-center"
                                 style="width: 75px;max-width:75px; min-width:75px;">
+                                <span t-field="line.product_uom_id"
+                                    style="padding-left: 10px;padding-right: 5px;" />
                             </td>
                             <td class="text-right"
                                 style="width: 125px;width: 125px;max-width:125px; min-width:125px;">
@@ -109,7 +135,10 @@
                             </td>
                             <td class="text-right"
                                 style="width: 75px;max-width:75px; min-width:75px;">
-                                <span style="margin-top:10px;color:white;" t-field='line.discount' />
+                                <t t-if='line.discount > 0.0'>
+                                    <span t-esc="'{0:,.0f} %'.format(line.discount)"
+                                        style="margin-top:10px;" />
+                                </t>
                             </td>
                             <td class="text-right"
                                 style="width: 150px;width: 150px;max-width:150px; min-width:150px;">
@@ -124,22 +153,22 @@
             </div>
             <div class="page"
                 style="position: absolute;
-                                        top: 885px;
+                                        top: 967px;
                                         font-size: 25px;
                                         text-align: right;
                                         padding-left: 970px;
                                         right: 70px;">
-                <p t-esc="'{0:,.2f}'.format(o.amount_untaxed)"
+                <p t-esc="'{0:,.2f} ฿'.format(o.amount_untaxed)"
                     style="margin-top:-10px;" />
-                <p t-esc="'{0:,.2f}'.format(o.amount_tax)"
+                <p t-esc="'{0:,.2f} ฿'.format(o.amount_tax)"
                     style="margin-top:-10px;" />
-                <p t-esc="'{0:,.2f}'.format(o.amount_total)"
+                <p t-esc="'{0:,.2f} ฿'.format(o.amount_total)"
                     style="margin-top:-14px;" />
 
             </div>
             <div class="page"
                 style="position: absolute;
-                                        top: 960px;">
+                                        top: 1040px;">
                 <!-- amount to text -->
                 <t t-set="amount_to_text"
                     t-value="o.currency_id.with_context({'lang': 'th_TH'}).amount_to_text(o.amount_total)" />
