--- a/odoo/custom/src/private/tev_form/report/quotation_form_sale.xml
+++ b/odoo/custom/src/private/tev_form/report/quotation_form_sale.xml
@@ -97,7 +97,7 @@
                             <td
                                 style="width: 330px;max-width:330px; min-width:330px;font-size: 18px;">
                                 <span t-field="line.name"
-                                    style="padding-left: 10px;padding-right: 10px;" />
+                                    style="padding-left: 10px;padding-right: 10px" />
                             </td>
                             <td class="text-center"
                                 style="width: 90px;max-width:90px; min-width:90px;">
@@ -122,7 +122,10 @@
                             </td>
                             <td class="text-right"
                                 style="width: 75px;max-width:75px; min-width:75px;">
-                                <span style="margin-top:10px;color:white;" t-field='line.discount' />
+                                <t t-if='line.discount > 0.0'>
+                                    <span t-esc="'{0:,.0f} %'.format(line.discount)"
+                                        style="margin-top:10px;" />
+                                </t>
                             </td>
                             <td class="text-right"
                                 style="width: 150px;width: 150px;max-width:150px; min-width:150px;">
