--- a/odoo/custom/src/private/tev_form/report/credit_note_tax_invoice.xml
+++ b/odoo/custom/src/private/tev_form/report/credit_note_tax_invoice.xml
@@ -8,7 +8,7 @@
                 <div class="col-3" name="col_left"
                     style="padding-top: 147px; padding-left: 40px;font-size: 25px;">
                     <p t-field="o.name" />
-                    <p style="margin-top:-15px;" t-field="o.invoice_date" />
+                    <p style="margin-top:-17px;" t-esc="o.get_formatted_date(o.invoice_date)" />
                 </div>
             </div>
             <div class="row" style="padding-left: 60px;position: absolute;top: 225px;">
@@ -16,7 +16,7 @@
                     style="font-size: 18px;max-width:600px; min-width:600px;">
                     <table style="table-layout: fixed;padding: 10px 10px;">
                         <tr>
-                             <td style="width: 205px;max-width:205px; min-width:205px;">
+                            <td style="width: 205px;max-width:205px; min-width:205px;">
                                 <b style="font-size: 20px;">ชื่อบริษัท / Company : </b>
                             </td>
                             <td>
@@ -90,33 +90,41 @@
                                         min-height:470px;
                                         max-height:470px;
                                         margin-left: 45px;
-                                        margin-top: 70px;
+                                        margin-top: 100px;
                                         position: absolute;
                                         top: 415px;">
                 <table style="table-layout: fixed;padding: 10px 10px;">
                     <t t-foreach="o.invoice_line_ids" t-as="line">
                         <tr>
                             <td style="width: 155px;max-width:155px; min-width:155px;">
-                                <span t-field="line.product_id.default_code"
-                                    style="padding-left: 10px;padding-right: 5px;" />
+                                <t t-if='line.price_unit > 0.0'>
+                                    <span t-field="line.product_id.default_code"
+                                        style="padding-left: 10px;padding-right: 5px;" />
+                                </t>
                             </td>
                             <td style="width: 10px;max-width:10px; min-width:10px;">
                                 <span />
                             </td>
                             <td
                                 style="width: 330px;max-width:330px; min-width:330px;font-size: 18px;">
-                                <span t-field="line.name"
-                                    style="padding-left: 10px;padding-right: 10px;white-space: pre-wrap;" />
+                                <t t-if='line.price_unit > 0.0'>
+                                    <span t-field="line.name"
+                                        style="padding-left: 10px;padding-right: 10px;white-space: pre-wrap;" />
+                                </t>
                             </td>
                             <td class="text-center"
                                 style="width: 90px;max-width:90px; min-width:90px;">
-                                <span t-field="line.quantity"
-                                    style="padding-left: 10px;padding-right: 5px;" />
+                                <t t-if='line.price_unit > 0.0'>
+                                    <span t-field="line.quantity"
+                                        style="padding-left: 10px;padding-right: 5px;" />
+                                </t>
                             </td>
                             <td class="text-center"
                                 style="width: 75px;max-width:75px; min-width:75px;">
-                                <span t-field="line.product_uom_id"
-                                    style="padding-left: 10px;padding-right: 5px;" />
+                                <t t-if='line.price_unit > 0.0'>
+                                    <span t-field="line.product_uom_id"
+                                        style="padding-left: 10px;padding-right: 5px;" />
+                                </t>
                             </td>
                             <td class="text-right"
                                 style="width: 125px;width: 125px;max-width:125px; min-width:125px;">
@@ -127,16 +135,16 @@
                             </td>
                             <td class="text-right"
                                 style="width: 75px;max-width:75px; min-width:75px;">
-                                <t t-if='line.discount > 0.0'>
+                                <t t-if='line.price_unit > 0.0'>
                                     <span t-esc="'{0:,.0f} %'.format(line.discount)"
                                         style="margin-top:10px;" />
                                 </t>
                             </td>
                             <td class="text-right"
                                 style="width: 150px;width: 150px;max-width:150px; min-width:150px;">
-                                <t t-if='line.price_subtotal > 0.0'>
-                                    <span t-field="line.price_subtotal"
-                                        style="padding-left: 5px;padding-right: 5px;" />
+                                <t t-if='line.price_unit > 0.0'>
+                                    <span style="padding-left: 5px;padding-right: 5px;"
+                                        t-esc="'{0:,.2f}'.format(o.amount_total)" />
                                 </t>
                             </td>
                         </tr>
@@ -145,7 +153,7 @@
             </div>
             <div class="page"
                 style="position: absolute;
-                                        top: 976px;
+                                        top: 1063px;
                                         font-size: 25px;
                                         text-align: right;
                                         padding-left: 970px;
@@ -164,7 +172,7 @@
             <!-- amount to text -->
             <div class="page"
                 style="position: absolute;
-                                        top: 1125px;">
+                                        top: 1211px;">
                 <t t-set="amount_to_text"
                     t-value="o.currency_id.with_context({'lang': 'th_TH'}).amount_to_text(o.amount_total)" />
                 <t t-set="amount_split" t-value="amount_to_text.split(' ')" />
@@ -173,22 +181,11 @@
                         t-value="''.join([amount_split[0], 'บาท', amount_split[3], 'สตางค์'])" />
                 </t>
                 <t t-else="">
-                    <t t-set="amount_text_thai" t-value="''.join([amount_split[0], 'บาทถ้วน'])" />
+                    <t t-set="amount_text_thai" t-value="''.join([amount_split[0]])" />
                 </t>
                 <p style="padding-left: 100px;">
                     <b style="font-size: 25px;" t-esc=" '('+ amount_text_thai +')' " />
                 </p>
-            </div>
-
-            <!-- ส่วนของ description  -->
-            <div class="page"
-                style="font-size: 15px;
-                                        position: absolute;
-                                        top: 1165px;
-                                        min-width: 1050px;
-                                        max-width:1050px;
-                                        padding-left: 90px;">
-                <span t-field="o.narration" style="padding-left: 5px;" />
             </div>
         </div>
     </template>
