--- a/odoo/custom/src/private/tev_form/report/receipt.xml
+++ b/odoo/custom/src/private/tev_form/report/receipt.xml
@@ -1,5 +1,4 @@
-<odoo>
-    <template id="tev_receipt_custom_form">
+<odoo>    <template id="tev_receipt_custom_form">
         <link href="//db.onlinewebfonts.com/c/e6a66ad34a680b8090172c85e4fece1d?family=Angsana+New"
             rel="stylesheet" />
         <div class="container" style="font-family:Angsana New">
@@ -14,7 +13,7 @@
             <div class="row" style="padding-left: 60px;position: absolute;top: 225px;">
                 <div class="col-6" name="col_left"
                     style="font-size: 18px;max-width:600px; min-width:600px;">
-                    <table style="table-layout: fixed;padding: 10px 10px;">
+                    <table style="table-layout: fixed;padding: 10px 10px; ">
                         <tr>
                             <td style="width: 140px;max-width:140px; min-width:140px;">
                                 <b style="font-size: 20px;">ชื่อบริษัท / Company : </b>
@@ -38,17 +37,32 @@
                             </td>
                         </tr>
                         <tr>
+                            <td style="width: 80px;max-width:80px; min-width:80px;">
+                                <b style="font-size: 20px;">โทร / Tel :</b>
+                            </td>
                             <t t-if="o.partner_id.mobile">
-                                <tr>
-                                    <td style="width: 80px;max-width:80px; min-width:80px;">
-                                        <b style="font-size: 20px;">โทร / Tel :</b>
-                                    </td>
-                                    <td>
-                                        <span t-field="o.partner_id.mobile" />
-                                    </td>
-                                </tr>
-
+                                <td>
+                                    <span t-field="o.partner_id.mobile" />
+                                </td>
                             </t>
+                        </tr>
+
+                        <tr>
+                            <td style="width: 80px;max-width:80px; min-width:80px;">
+                                <b style="font-size: 20px;">เลขประจำตัวผู้เสียภาษีอากร / Tax ID:</b>
+                            </td>
+                            <td>
+                                <span t-field="o.partner_id.vat" />
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td style="width: 80px;max-width:80px; min-width:80px;">
+                                <b style="font-size: 20px;">สาขาที่ / Tax Branch:</b>
+                            </td>
+                            <td>
+                                <span>สำนักงานใหญ่</span>
+                            </td>
                         </tr>
                     </table>
 
@@ -72,9 +86,9 @@
                                         min-height:648px;
                                         max-height:648px;
                                         margin-left: 45px;
-                                        margin-top: 70px;
+                                        margin-top: 137px;
                                         position: absolute;
-                                        top: 329px;">
+                                        top: 354px;">
                 <table
                     style="table-layout: fixed;padding: 10px 10px; height:648px;min-height:648px;max-height:648px;"
                     class="text-center">
@@ -89,7 +103,7 @@
                             style="width: 230px; max-width:230px; min-width:230px; border-right:2px solid black; ">
                             จำนวนเงิน<p style="margin-top:-15px;">Original Amount</p></th>
                         <th
-                            style="width: 197px; max-width:197px; min-width:197px; border-right:2px solid black; ">
+                            style="width: 198px; max-width:198px; min-width:198px; border-right:2px solid black; ">
                             ยอดชำระ<p style="margin-top:-15px;">Amount Paid</p></th>
                         <th style="width: 148px; max-width:148px; min-width:148px; ">ยอดคงเหลือ<p
                                 style="margin-top:-15px;">Balance</p></th>
@@ -101,8 +115,8 @@
                         <t t-if="line.move_type!='out_refund'">
                             <t t-set="total_amount" t-value="total_amount+line.amount_total" />
                             <tr>
-                                <td style="border-right:2px solid black; ">
-                                    <p t-esc="line.invoice_date" />
+                                <td style="border-right:2px solid black;">
+                                    <p t-esc="o.get_formatted_date(line.invoice_date)" />
                                 </td>
 
                                 <td style="border-right:2px solid black;">
@@ -132,7 +146,7 @@
             <!-- sum amount total -->
             <div class="page"
                 style="position: absolute;
-                        top: 1060px;
+                        top: 1152px;
                         font-size: 25px;
                         text-align: right;
                         padding-left: 970px;
@@ -144,7 +158,7 @@
             <!-- amount to text -->
             <div class="page"
                 style="position: absolute;
-                                        top: 1047px;">
+                                        top: 1139px;">
                 <t t-set="amount_to_text"
                     t-value="o.currency_id.with_context({'lang': 'th_TH'}).amount_to_text(o.amount_total)" />
                 <t t-set="amount_split" t-value="amount_to_text.split(' ')" />
@@ -159,8 +173,6 @@
                     <b style="font-size: 25px;" t-esc=" '('+ amount_text_thai +')' " />
                 </p>
             </div>
-
-            <!-- description -->
             
         </div>
     </template>
